Link with the OpenGL libraries

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,9 +5,11 @@ project(boxy)
 set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
 
 find_package(SDL2 REQUIRED)
+find_package(OpenGL REQUIRED)
 find_package(GLEW REQUIRED)
 include_directories(${SDL2_INCLUDE_DIR})
 include_directories(${GLEW_INCLUDE_DIRS})
+include_directories(${OPENGL_INCLUDE_DIR})
 include_directories(include)
 
 
@@ -17,7 +19,4 @@ add_executable(boxy ${SOURCES})
 
 target_link_libraries(boxy ${SDL2_LIBRARY})
 target_link_libraries(boxy ${GLEW_LIBRARIES})
-
-if (APPLE)
-  target_link_libraries(boxy "-framework OpenGL")
-endif()
+target_link_libraries(boxy ${OPENGL_gl_LIBRARY})
